--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,17 +15,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".floor_info">
+        <activity android:name=".list_payment_methods"></activity>
+        <activity android:name=".qr_generator">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".add_paypal">
-
-        </activity>
-        <activity android:name=".add_credit_card"></activity>
+        <activity android:name=".floor_info"></activity>
+        <activity android:name=".add_paypal" />
+        <activity android:name=".add_credit_card" />
         <activity android:name=".navmenu_choosepayment" />
         <activity android:name=".parking_info" />
         <activity android:name=".parking_list" />
