--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".LogInError"></activity>
+        <activity android:name=".Filter">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+        <activity android:name=".LogInError" />
         <activity
             android:name=".navigation"
             android:label="@string/title_activity_navigation"
-            android:theme="@style/NoActionBar"></activity>
+            android:theme="@style/NoActionBar" />
         <activity android:name=".list_payment_methods" />
-        <activity android:name=".qr_generator"></activity>
+        <activity android:name=".qr_generator" />
         <activity android:name=".floor_info" />
         <activity android:name=".add_paypal" />
         <activity android:name=".add_credit_card" />
@@ -42,17 +49,11 @@
 
         <activity
             android:name=".FirstMenu"
-            android:label="@string/title_activity_first_menu"></activity>
+            android:label="@string/title_activity_first_menu" />
         <activity
             android:name=".MainSign_up"
             android:label="Sign up menu" />
-        <activity android:name=".MainActivity">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-    </activity>
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
