Corrected main navigation page. Added buttons functions.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".Filter">
-        </activity>
+        <activity android:name=".Filter"></activity>
         <activity android:name=".LogInError" />
         <activity
             android:name=".navigation"
@@ -27,17 +26,13 @@
         <activity android:name=".floor_info" />
         <activity android:name=".add_paypal" />
         <activity android:name=".add_credit_card" />
-        <activity android:name=".navmenu_choosepayment" >
+        <activity android:name=".navmenu_choosepayment">
 
-    </activity>
+        </activity>
         <activity android:name=".parking_info" />
-        <activity android:name=".parking_list" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        <activity android:name=".parking_list">
 
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-    </activity>
+        </activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -56,7 +51,13 @@
         <activity
             android:name=".MainSign_up"
             android:label="Sign up menu" />
-        <activity android:name=".MainActivity" />
+        <activity android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
